@@ -79,83 +79,22 @@ if [ ! -x "$JAVACMD" ] ; then
   exit 1
 fi
 
-LOCALCLASSPATH=$JAVA_HOME/lib/tools.jar
-
-for i in "$VD_SERVER_HOME"/lib/*.jar
-do
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$LOCALCLASSPATH":"$i"
-    fi
-  fi
-done
-
-# add in the optional dependency .jar files
-for i in "$VD_SERVER_HOME"/lib/ext/*.jar
-do
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$LOCALCLASSPATH":"$i"
-    fi
-  fi
-done
-
-for i in "$VD_SERVER_HOME"/server/lib/*.jar
-do
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$LOCALCLASSPATH":"$i"
-    fi
-  fi
-done
-
-for i in "$VD_SERVER_HOME"/server/lib/ext/*.jar
-do
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$LOCALCLASSPATH":"$i"
-    fi
-  fi
-done
-
-for i in "$VD_SERVER_HOME"/services/JMX/SERVICE-INF/lib/*.jar
-do
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$LOCALCLASSPATH":"$i"
-    fi
-  fi
-done
-
-for i in ../DIR-INF/lib/*.jar
-do
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$LOCALCLASSPATH":"$i"
-    fi
-  fi
-done
+LOCALLIBPATH="$JAVA_HOME/lib/ext:$JAVA_HOME/jre/lib/ext"
+LOCALLIBPATH="$LOCALLIBPATH:$VD_SERVER_HOME/lib"
+LOCALLIBPATH="$LOCALLIBPATH:$VD_SERVER_HOME/lib/ext"
+LOCALLIBPATH="$LOCALLIBPATH:$VD_SERVER_HOME/server/lib"
+LOCALLIBPATH="$LOCALLIBPATH:$VD_SERVER_HOME/services/JMX/SERVICE-INF/lib"
+LOCALLIBPATH="$LOCALLIBPATH:../DIR-INF/lib"
 
 # For Cygwin, switch paths to Windows format before running java
 if $cygwin; then
   VD_SERVER_HOME=`cygpath --windows "$VD_SERVER_HOME"`
   JAVA_HOME=`cygpath --windows "$JAVA_HOME"`
-  LOCALCLASSPATH=`cygpath --path --windows "$LOCALCLASSPATH"`
+  LOCALLIBPATH=`cygpath --path --windows "$LOCALLIBPATH"`
 fi
 
 exec "$JAVACMD" $VD_SERVER_OPTS \
--classpath "$LOCALCLASSPATH" \
+-Djava.ext.dirs="$LOCALLIBPATH" \
+-Djava.library.path="$LOCALLIBPATH" \
 -Dpenrose.home="$VD_SERVER_HOME" \
 org.safehaus.penrose.activeDirectory.client.ADSyncClient "$@"
